--- a/pset6/app/src/main/res/layout/activity_main.xml
+++ b/pset6/app/src/main/res/layout/activity_main.xml
@@ -12,36 +12,31 @@
         android:layout_width="wrap_content"
         android:layout_height="72dp"
         android:padding="10sp"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="30sp"
         android:layout_marginBottom="24dp"
         android:gravity="center|top"
         android:layout_gravity="center_horizontal" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center|bottom"
-        android:orientation="vertical">
-        <android.support.v7.widget.AppCompatButton
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center|bottom">
+        <Button
             android:id="@+id/loginButton"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center"
+            android:layout_height="50dp"
+            android:layout_marginBottom="110dp"
+            android:layout_alignParentBottom="true"
             android:background="@color/colorPrimaryDark"
-            android:padding="0dp"
             android:text="Log in"/>
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/databaseButton"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:layout_gravity="center_horizontal|center"
+            android:layout_height="50dp"
+            android:layout_marginBottom="40dp"
+            android:layout_alignParentBottom="true"
             android:background="@color/colorPrimaryDark"
-            android:padding="12dp"
             android:text="Ga meteen naar de top 2000"/>
-    </LinearLayout>
-
+    </RelativeLayout>
 </LinearLayout>
