--- a/pset6/app/src/main/res/values/styles.xml
+++ b/pset6/app/src/main/res/values/styles.xml
@@ -10,5 +10,6 @@
         <item name="android:textColorHint">@color/colorWhite</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_home_icon</item>
     </style>
 </resources>
